# QtParted

./: CMakeLists.txt
buildScripts/linux/: buildAstraCE.sh  buildCentos7.sh
src/: main.cpp
